8/17/05 (asl)
  * Fixed mingw32 miscompilation.

8/17/05 (relf)
  * "out-of-box" support for x86_64 target
  * target can be specified in the master Makefile
  * fixed some minor problem with makefiles
  * some missed #include's recovered
  * major problems w/ gcc 4.0 compilation resolved
  * extra "%l" specificators removed
  * type conversion applied to printf() arguments where required 
  * implicit function declarations made explicit
  * other minor issues fixed

8/15/05 (frmky)
  * Fixed a small typo in combparts_tpie.cpp.

8/12/05 (asl)
  * Fixed mingw32 miscompilation.
  * Changed "%lu" to PRIu32.
  * Integrated matbuild-tpie experimental package. Please read
    matbuild-tpie.txt in the experimental/ directory.
  * Some changes in optimization parameters. Added -ffast-math and
    increased function size for inlining. Got some speed-up.

8/10/05 (Brian Gladman)
  * Updated various files to repair the broken VC++ compilation
  * Added VC++ inline assembler to blanczos64.c

7/20/05 (asl)
  * Fixed some boundary cross bug in combinedSize().

7/17/05 (trilliwig)
  * Converted sources to use standard C9x int types defined in inttypes.h.
    Corrected a number of format specifiers for printf/scanf.  Changed
    a couple types here and there to correct possible problems.
  * Added check that the aligned memory functions actually return aligned
    memory in the MMX Lanczos code.

7/14/05 (trilliwig)
  * Patched factLat.pl so it automatically applies more generous parameters
    for SNFS factorizations where the polynomial degree is not optimal.
  * Reorganized mpz_fact_factorEasy() so the control flow makes more sense
    and doesn't repeat operations like trial division unnecessarily.

7/12/05 (trilliwig)
  * Updated mpz_fact_factorEasy() to check for higher multiplicity of prime
    factors above the trial division limit.  The DISC_P_DIV lines in
    ggnfs.log will also be written/interpreted accordingly.  This should